[926] bug css overflow

--- a/app/assets/stylesheets/inuit/components/_c-detail-condition.scss
+++ b/app/assets/stylesheets/inuit/components/_c-detail-condition.scss
@@ -24,4 +24,7 @@
 
 .c-detail-condition-text {
   margin-left: space(2);
+  a {
+    word-break: break-word;
+  }
 }
